--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/alex"]
 	path = themes/alex
 	url = https://github.com/ppoffice/hexo-theme-alex.git
+[submodule "themes/hueman"]
+	path = themes/hueman
+	url = https://github.com/ppoffice/hexo-theme-hueman.git
